[tool.poetry]
name = "scicomp"
version = "0.1.0"
description = "Some numerical methods"
authors = ["anand2312 <anand2312@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sympy = "^1.11.1"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
